feat: update website metadata and add dynamic title

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
+    <meta
+      name="description"
+      content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
+    />
+    <title>Àlex Luelmo | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
