feat: implement lazy loading for images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
     />
     <title>Àlex Luelmo | Portfolio</title>
+    <link rel="preload" as="image" href="/src/assets/images/me.webp" />
   </head>
   <body>
     <div id="root"></div>
