--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
       content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
     />
     <title>Àlex Luelmo | Portfolio</title>
-    <link rel="preload" as="image" href="/src/assets/images/me.webp" />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/assets/images/me.webp"
+      type="image/webp"
+    />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <link rel="stylesheet" href="/src/styles/index.css" />
   </body>
 </html>
