feat: improve SEO with meta tags

--- a/index.html
+++ b/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Àlex Luelmo - Portfolio</title>
+
+    <!-- SEO Meta Tags -->
     <meta
       name="description"
       content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
     />
-    <title>Àlex Luelmo | Portfolio</title>
+    <meta name="author" content="Àlex Luelmo" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://luelmo14.github.io/my-portfolio/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://luelmo14.github.io/my-portfolio/"
+    />
+    <meta property="og:title" content="Àlex Luelmo - Portfolio" />
+    <meta
+      property="og:description"
+      content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
+    />
+    <meta
+      property="og:image"
+      content="https://luelmo14.github.io/my-portfolio/icon.png"
+    />
+    <meta property="og:image:width" content="176" />
+    <meta property="og:image:height" content="176" />
+
+    <!-- Additional Meta Information -->
+    <meta name="publisher" content="Àlex Luelmo" />
+
+    <!-- Preload Critical Assets -->
     <link rel="preload" href="/src/assets/images/me.webp" as="image" />
   </head>
   <body>
