chore: update favicon and metadata

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Àlex Luelmo - Portfolio</title>
 
-    <!-- SEO Meta Tags -->
+    <title>Àlex Luelmo - Portfolio</title>
     <meta
       name="description"
-      content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
+      content="Explore Àlex Luelmo's portfolio: A Full-Stack developer with expertise in React, Node.js, and Python. Showcasing innovative web projects, backend solutions, and a passion for creating efficient, user-friendly applications."
     />
-    <meta name="author" content="Àlex Luelmo" />
-    <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://luelmo14.github.io/my-portfolio/" />
+
+    <link rel="icon" type="image/png" href="/icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -24,7 +24,7 @@
     <meta property="og:title" content="Àlex Luelmo - Portfolio" />
     <meta
       property="og:description"
-      content="Àlex Luelmo's portfolio - Full-Stack Developer showcasing projects and skills in web development."
+      content="Explore Àlex Luelmo's portfolio: A Full-Stack developer with expertise in React, Node.js, and Python. Showcasing innovative web projects, backend solutions, and a passion for creating efficient, user-friendly applications."
     />
     <meta
       property="og:image"
@@ -32,6 +32,27 @@
     />
     <meta property="og:image:width" content="176" />
     <meta property="og:image:height" content="176" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://luelmo14.github.io/my-portfolio/"
+    />
+    <meta property="twitter:title" content="Àlex Luelmo - Portfolio" />
+    <meta
+      property="twitter:description"
+      content="Explore Àlex Luelmo's portfolio: A Full-Stack developer with expertise in React, Node.js, and Python. Showcasing innovative web projects, backend solutions, and a passion for creating efficient, user-friendly applications."
+    />
+    <meta
+      property="twitter:image"
+      content="https://luelmo14.github.io/my-portfolio/icon.png"
+    />
+
+    <!-- SEO Meta Tags -->
+    <meta name="author" content="Àlex Luelmo" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://luelmo14.github.io/my-portfolio/" />
 
     <!-- Additional Meta Information -->
     <meta name="publisher" content="Àlex Luelmo" />
