--- a/index.html
+++ b/index.html
@@ -15,6 +15,28 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
+    <!-- Language alternatives -->
+    <link
+      rel="alternate"
+      hreflang="en"
+      href="https://luelmo14.github.io/my-portfolio/en/"
+    />
+    <link
+      rel="alternate"
+      hreflang="es"
+      href="https://luelmo14.github.io/my-portfolio/es/"
+    />
+    <link
+      rel="alternate"
+      hreflang="ca"
+      href="https://luelmo14.github.io/my-portfolio/ca/"
+    />
+    <link
+      rel="alternate"
+      hreflang="x-default"
+      href="https://luelmo14.github.io/my-portfolio/"
+    />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
