chore: add favicon shortcut link

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="Explore Àlex Luelmo's portfolio: A Full-Stack developer with expertise in React, Node.js, and Python. Showcasing innovative web projects, backend solutions, and a passion for creating efficient, user-friendly applications."
     />
 
+    <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
